# robotrainer_control

./: .gitignore  README.md
robotrainer/: CMakeLists.txt  package.xml
robotrainer_control/: CMakeLists.txt  package.xml
robotrainer_controllers/: CMakeLists.txt  README.md  package.xml  robotrainer_controllers_plugin.xml
robotrainer_controllers/cfg/: FTSAdaptiveForceController.cfg  FTSBaseController.cfg  IntegralCompareCtrl.cfg  PassiveBehaviorController.cfg
robotrainer_controllers/ez_dm/: README.md  ack.py  ack_old.py  ask_current_state.py  common.py  diff.py  omni.py  pivot.py  ros_srv_caller.sh
robotrainer_controllers/include/drive_modes/: AxPLUSb.h  ackermann.h  ackermann_smoother.h  castor.h  dead_reckon.h  differential.h  differential_with_matrices.h  drive_mode_base_class.h  drive_modes.h  line2dof.h  omni_with_max_accel.h  omnidirectional.h  pivot.h  pivot_with_moving_focus.h  synchro.h
robotrainer_controllers/include/robotrainer_controllers/: fts_GeomController.h  fts_adaptive_force_controller.h  fts_base_controller.h  fts_controller.h  fts_controllers_led_defines.hpp  fts_wheelControllerBase.h  integral_compare_ctrl.h  passive_behavior_controller.h  undercarriage_drive_mode_service.h
robotrainer_controllers/launch/: concept.launch
robotrainer_controllers/msg/: A_and_b.msg  CastorParams.msg  DriveModeParameters.msg  ICR.msg  VirtualAxle.msg
robotrainer_controllers/scripts/: robotrainer_rear_wheels_state_publisher.py  sca_digital_output.py
robotrainer_controllers/src/: fts_adaptive_force_controller.cpp  fts_base_controller.cpp  fts_controller.cpp  integral_compare_ctrl.cpp  odometry_controller.cpp  passive_behavior_controller.cpp  twist_controller.cpp  undercarriage_drive_mode_service.cpp
robotrainer_controllers/src/drive_modes/: AxPLUSb.cpp  ackermann.cpp  ackermann_generalized.cpp  ackermann_smoother.cpp  castor.cpp  dead_reckon.cpp  differential.cpp  differential_with_matrices.cpp  drive_mode_base_class.cpp  line2dof.cpp  omni_with_max_accel.cpp  omnidirectional.cpp  pivot.cpp  pivot_with_moving_focus.cpp  synchro.cpp
robotrainer_controllers/srv/: GetRearWheelsState.srv  SetRearWheelsState.srv  ucdm_cmd.srv
robotrainer_data_service/: CMakeLists.txt  package.xml
robotrainer_data_service/launch/: reconfigure_service.launch
robotrainer_data_service/nodes/: data_srv
robotrainer_data_service/srv/: DataOperation.srv  FileList.srv
robotrainer_data_service/yamls/: editor_demo_scenario.yaml
robotrainer_helper_types/: CMakeLists.txt  package.xml
robotrainer_helper_types/include/robotrainer_helper_types/: Integral.h  wrench_twist_datatype.h
robotrainer_helper_types/src/: Integral.cpp  wrench_twist_datatype.cpp
robotrainer_modalities/: CMakeLists.txt  mainpage.dox  modalities_controllers_plugins.xml  modalities_plugin.xml  package.xml
robotrainer_modalities/cfg/: ModalitiesPathTrackingController.params  ModalitiesVFController.params  ModalitiesVirtualWallsController.params  PathTracking.params  VirtualAreas.params  VirtualForces.params  VirtualWalls.params
robotrainer_modalities/include/robotrainer_modalities/: modalities_controller_base.h  modalities_path_tracking_controller.h  modalities_virtual_forces_controller.h  modalities_virtual_walls_controller.h  modality_base.h  path_tracking.h  virtual_areas.h  virtual_forces.h  virtual_walls.h
robotrainer_modalities/src/: modalities_path_tracking_controller.cpp  modalities_virtual_forces_controller.cpp  modalities_virtual_walls_controller.cpp  path_tracking.cpp  virtual_areas.cpp  virtual_forces.cpp  virtual_walls.cpp
robotrainer_panel/: CMakeLists.txt  package.xml  plugin_description.xml
robotrainer_panel/cfg/: robotrainer.rviz  robotrainer_editor.params
robotrainer_panel/include/robotrainer_panel/: robotrainer_editor_area.h  robotrainer_editor_display_path.h  robotrainer_editor_force.h  robotrainer_editor_panel.h  robotrainer_editor_section.h  robotrainer_editor_tool.h  robotrainer_editor_wall.h
robotrainer_panel/launch/: robotrainer.launch
robotrainer_panel/src/: robotrainer_editor_area.cpp  robotrainer_editor_display_path.cpp  robotrainer_editor_force.cpp  robotrainer_editor_panel.cpp  robotrainer_editor_section.cpp  robotrainer_editor_tool.cpp  robotrainer_editor_wall.cpp
robotrainer_parameters/: CMakeLists.txt  package.xml  setup.py
robotrainer_parameters/cfg/: SharedParams.params  robotrainer_parameters.py
robotrainer_parameters/include/robotrainer_parameters/: shared_params.h
robotrainer_parameters/src/: shared_params.cpp
robotrainer_parameters/yamls/: demo_scenario.yaml  path_recorded_2018_10_15.path.yaml  wall_created_2018_10_15.wall.yaml
robotrainer_parameters/yamls/rqt_params/: base_fast.yaml  base_normal.yaml  base_slow.yaml  pathtracking_fast.yaml  pathtracking_normal.yaml  pathtracking_slow.yaml  v_forces_fast.yaml  v_forces_normal.yaml  v_forces_slow.yaml  v_walls_fast.yaml  v_walls_normal.yaml  v_walls_slow.yaml
