<?xml version="1.0"?>
<package format="2">
  <name>robotrainer_control</name>
  <version>0.0.1</version>
  <description>Metapackage for Robotrainer control packages (controllers/modalities/editor) packages</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="stogl@todo.todo">stogl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>IPR-Licence</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>robotrainer_controllers</exec_depend>
  <!-- 
  <exec_depend>robotrainer_modalities</exec_depend>
  <exec_depend>robotrainer_parameters</exec_depend> 
  
  -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
