<?xml version="1.0"?>
<package format="2">
  <name>robotrainer_controllers</name>
  <version>0.0.1</version>
  <description>Controller for Robotrainer</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>IPR-Licence</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="repository">https://gitlab.ira.uka.de/iirob/robotrainer_controllers</url>
  <url type="bugtracker">https://gitlab.ira.uka.de/iirob/robotrainer_controllers/issues</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <depend>cob_base_controller_utils</depend>
  <depend>cob_omni_drive_controller</depend>
  <depend>cmake_modules</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>force_torque_sensor</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>iirob_filters</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>rosparam_handler</depend>
  <depend>leg_tracker</depend>
  <depend>iirob_led</depend>
  <depend>robotrainer_modalities</depend>
  <depend>robotrainer_helper_types</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/robotrainer_controllers_plugin.xml"/>
  </export>

</package>
