<?xml version="1.0"?>
<package format="2">
  <name>robotrainer_data_service</name>
  <version>0.0.0</version>
  <description>The robotrainer_data_service package</description>

  <maintainer email="uydmc@student.kit.edu">uydmc</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
